Fixed issue with saving updates. Fixed issue with displaying thumbs up/down.

--- a/BVS/Views/Shared/DisplayTemplates/Measurement.cshtml
+++ b/BVS/Views/Shared/DisplayTemplates/Measurement.cshtml
@@ -28,11 +28,11 @@
             <br />
             @if ( Model.IsPatientRatingThumbsUp.HasValue && Model.IsPatientRatingThumbsUp.Value )
             {
-                @Html.Display( "Thumbs Up " )
+                @Html.DisplayName( "Thumbs Up " )
             }
             else if ( Model.IsPatientRatingThumbsDown.HasValue && Model.IsPatientRatingThumbsDown.Value )
             {
-                @Html.Display( "Thumbs Down " )
+                @Html.DisplayName( "Thumbs Down " )
             }
 
             @Html.DisplayFor( m => m.PatientRating, new { @class = "form-display" } )
