--- a/BVS/Views/Measurement/Details.cshtml
+++ b/BVS/Views/Measurement/Details.cshtml
@@ -30,3 +30,12 @@
     grid.GetHtml( tableStyle: "webGrid", headerStyle: "webGridHeader", alternatingRowStyle: "webGridAlt",
         columns: new[] { grid.Column( "Link", "", (item) => Html.ActionLink( "Select", "Details", "SubMeasurement", new { id = item.ID }, null ) ), grid.Column( "MeasurementOn", "Measurement Time" ), grid.Column( "CalculatedVolume", "Calculated Volume" ) } ).ToHtmlString()
 )
+
+@if ( Model.SubMeasurements.Count == 0 )
+{
+    <div class="row">
+        <div class="col-xs-12">
+            &nbsp;&nbsp;No submeasurement data.
+        </div>
+    </div>
+}
