--- a/BVS/Views/Shared/_Layout.cshtml
+++ b/BVS/Views/Shared/_Layout.cshtml
@@ -30,11 +30,11 @@
                 @Html.ActionLink( "BVS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" } )
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink( "Home", "Index", "Home" )</li>
-                    <li>@Html.ActionLink( "About", "About", "Home" )</li>
-                    <li>@Html.ActionLink( "Contact", "Contact", "Home" )</li>
-                </ul>
+                @*<ul class="nav navbar-nav">
+                        <li>@Html.ActionLink( "Home", "Index", "Home" )</li>
+                        <li>@Html.ActionLink( "About", "About", "Home" )</li>
+                        <li>@Html.ActionLink( "Contact", "Contact", "Home" )</li>
+                    </ul>*@
                 @Html.Partial( "_LoginPartial" )
             </div>
         </div>
